# Omok

./: .gitignore  CMakeLists.txt  OmokGUI.cpp  OmokGUI.h  README.md  WinCondition.cpp  WinCondition.h  log.cpp  log.h  main.cpp  userLogin.cpp
